Move main.scss to assets folder

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Christian Solorzano
 email: cs@christiansolorzano.com
 description: Christian is a designer based in Chicago, solving complex problems through empathy & creativity.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: http://christiansolorzano.com
+url: "https://www.christiansolorzano.com"
+baseurl: ""
 instagram_username: xnslrzn
 
 
